--- a/style.css
+++ b/style.css
@@ -93,9 +93,28 @@ line-height: 1.3;
     border: dotted;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+a {
+    text-decoration: none;
+}
 
-
-
-
-
-
+.articles {
+    color: crimson;
+    
+}
+#videos {
+    padding: 50px;
+    text-align: center;
+}
+#writing {
+    padding: 50px;
+    text-align: center;
+}
+#work {
+    padding: 50px;
+    text-align: center;
+    font-size: 50;
+    line-height: inherit;
+}
